# slime

./: Cargo.toml  README.md
.cargo/: config.toml
assets/shaders/: blur.wgsl  pcg.wgsl  project.wgsl  simulate.wgsl  utils.wgsl
src/: blur.rs  lib.rs  lib.rs.old  main.rs  project.rs  shader.wgsl  sim.rs  simulation.rs  species.rs
src/sim/: blur.rs  mod.rs  options.rs  seed.rs  species.rs  trail.rs
