[package]
name = "slime"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.10.1"
bytemuck = { version = "1.13.1", features = ["bytemuck_derive", "derive"] }
env_logger = "0.10.0"
itertools = "0.10.5"
log = "0.4.17"
rand = "0.8.5"
